<resources>
    <string name="app_name">ProyectoDAM</string>

    <!-- PANTALLA LOGIN -->
    <string name="pwd_et_wlog">Contraseña</string>
    <string name="entrar_bt_wlog">Entrar</string>
    <string name="crear_cuenta_tv_wlog">Crear una nueva cuenta</string>

    <!-- PANTALLA CREAR CUENTA -->
    <string name="mail_et_wcreacu">E-mail</string>

    <string name="pwd_et_wcreacu">Contraseña</string>
    <string name="repetir_pwd_et_wcreacu">Repetir contraseña</string>
    <string name="fnac_et_wcreacu">Fecha de nacimiento</string>
    <string name="ciudad_et_wcreacu">Ciudad</string>
    <string name="crear_cuenta_bt_wcreacu">Crear cuenta</string>

    <!-- GENERALES -->
    <string name="aceptar">Aceptar</string>
    <string name="volver">Volver</string>
    <string name="cancelar">Cancelar</string>
    <string name="sin_equipo">Aun no perteneces a ningun equipo</string>
    <string name="si">Si</string>
    <string name="enviar">Enviar</string>
    <string name="escribir_mensaje">Enviar mensaje...</string>

    <!-- TODO: Remove orange this placeholder text -->
    <string name="title_activity_maps">Map</string>


    <!-- TEXTO PARA TOAST -->
    <!-- ERRORES -->
    <string name="error_faltan_campos">Antes debes rellenar todos los campos</string>
    <string name="error_pwd_no_match">Las contraseñas no coinciden</string>
    <string name="error_mail_no_valido">El email introducido no es valido</string>
    <string name="error_registro_no_completado">Error al completar el registrelo intentelo mas tarde</string>
    <string name="error_pwd_corta">La contraseña debe tener al menos 4 caracteres</string>
    <string name="ya_tienes_equipo">Ya perteneces a un equipo</string>

    <!-- OK -->
    <string name="ok_registro_completado">Registro Completado</string>


    <!--FRAGMENT PESTAÑA EQUIPO-->
    <string name="mensaje_sin_equipo">Aun no te has unido a un equipo, si quieres puedes buscar uno en la pestaña de mapa, o crear tu propio equipo desde la opcion Crear equipo del menu</string>
    <string name="dejar_equipo">DEJAR EL EQUIPO</string>
    <string name="unirse_equipo">UNIRSE AL EQUIPO</string>

    <!--AVTIVIDAD CREAR EQUIPO-->
    <string name="nombre_equipo">Nombre del equipo</string>
    <string name="descripcion">Algo sobre vosotros....</string>
    <string name="ubicacion_bt">¿Donde se encuentra tu equipo?</string>
    <string name="title_activity_pantalla_ubicacion_equipo">Map</string>

    <!--DIALOGOS-->
    <string name="wubicequip_tilte_conf_dialog">Ubicacion</string>
    <string name="wubicequip_msj_dialog">¿Deseas utilizar esta ubicación para tu equipo?</string>
    <string name="dejar_equipo_titulo">Vas a abandonar el equipo</string>
    <string name="dejar_equipo_msj">¿Estás seguro de que deseas dejar el equipo?</string>
    <string name="unirse_equipo_titulo">Vas a unirte a un equipo</string>
    <string name="unirse_equipo_msj">¿Estás seguro de que queres unirte a este equipo?</string>
    <string name="faltan_campos_msj">Debes rellenar todos los campos antes de continuar</string>
    <string name="faltan_campos_titulo">Error de formulario</string>



    <!--ACTIVIDAD JUGADOR-->
    <string name="enviar_privado">Enviar mensaje privado</string>



    <!--DATOS JUGADOR-->
    <string name="nick">Nick:</string>
    <string name="rol">Rol:</string>
    <string name="equipo">Equipo:</string>
    <string name="mail">E-mail</string>


    <!--MENU-->
    <string name="cerrar_sesion_menu">Cerrar Sesion</string>
    <string name="crear_equipo_menu">Crear un equipo</string>




</resources>
